Fixed a padding issue with dnd project images on mobile

--- a/src/style/mobileStyles.scss
+++ b/src/style/mobileStyles.scss
@@ -33,3 +33,7 @@
   max-width: 325px;
   max-height: 451px;
 }
+
+.mobile-padding-right-none {
+  padding-right : 0;
+}
